[package]
name = "decision_transformer_dfdx"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A fast, extensible implementation of Decision Transformers in Rust using dfdx. Based on the paper Decision Transformer: Reinforcement Learning via Sequence Modeling."
repository = "https://github.com/JYudelson1/decision_transformer_dfdx/tree/main"
readme = "README.md"
keywords = ["ml"]


[dependencies]
dfdx = { version = "0.13", features = ["safetensors"] }
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"

